Add theme submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = public
 	url = git@github.com:seiffert/seiffert.github.io.git
 	branch = master
+[submodule "themes/heather-hugo"]
+	path = themes/heather-hugo
+	url = https://github.com/hbpasti/heather-hugo
